<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="unit">cm</string>
    <string name="female_text">FEMALE</string>
    <string name="age">AGE</string>
    <string name="base_height">170</string>
    <string name="base_weight">55</string>
    <string name="base_age">22</string>
    <string name="todo">TODO</string>
    <string name="height">HEIGHT</string>
    <string name="calculate">Calculate</string>
    <string name="weight">WEIGHT</string>
    <string name="male">MALE</string>
    <string name="header_text">BMI CALCULATOR</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_password">Enter password</string>
    <string name="welcome_to_the_bmi_calculator">Welcome to the BMI Calculator!</string>
    <string name="sign_in">Sign In</string>
    <string name="doesn_t_have_account_sign_up">Doesn\'t have account? Sign up</string>
    <string name="create_your_bmi_account">Create your BMI Account</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign In</string>
    <string name="_22_1">22.1</string>
    <string name="normal">NORMAL</string>
    <string name="normal_bmi_range">Normal BMI Range:</string>
    <string name="_18_5_25_kg_m2">18.5 - 25 kg/m2</string>
    <string name="you_have_a_normal_body_nweight_good_job">You have a normal body \nweight. Good job!</string>
    <string name="user_medical_history">User Medical History</string>
    <string name="your_medical_history_leads_to">Your medical history leads to...</string>
    <string name="your_medical_history_leads_to_">Your medical history leads to...</string>
</resources>