<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".HomeActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/on_primary_bg"
        android:elevation="20dp">

        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/header_text"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/content_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/bg_card_small"
        android:elevation="20dp"
        android:padding="30dp">

        <TextView
            android:id="@+id/state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bmi_calc"
            android:layout_centerHorizontal="true"
            android:text="@string/_22_1"
            android:textColor="@color/white"
            android:textSize="50sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/bmi_image"
            android:layout_width="wrap_content"
            android:layout_height="220dp"
            android:layout_below="@+id/state"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/bmi_calc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:text="@string/normal"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bmi_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/normal_bmi_range"
            android:textColor="@color/hintColor"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/range"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/_18_5_25_kg_m2"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/range"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:text="@string/you_have_a_normal_body_nweight_good_job"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22sp" />
    </RelativeLayout>
</RelativeLayout>