<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/center_horizontal_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

    <RelativeLayout
        android:id="@+id/center_vertical_line"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerInParent="true" />

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#181A3D"
        android:elevation="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/header_text"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>


    <RelativeLayout
        android:id="@+id/male"
        android:layout_width="160dp"
        android:layout_height="150dp"
        android:layout_above="@id/height_layout"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="35dp"
        android:layout_toStartOf="@id/center_vertical_line"
        android:background="@drawable/bg_card_small"
        android:elevation="20dp">

        <ImageView
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_above="@+id/male_text"
            android:layout_centerInParent="true"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_male" />

        <TextView
            android:id="@+id/male_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/railway"
            android:text="@string/male"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/female"
        android:layout_width="160dp"
        android:layout_height="150dp"
        android:layout_above="@+id/height_layout"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="35dp"
        android:layout_toEndOf="@id/center_vertical_line"
        android:background="@drawable/bg_card_small"
        android:elevation="20dp">

        <ImageView
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_above="@+id/female_text"
            android:layout_centerInParent="true"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_female" />

        <TextView
            android:id="@+id/female_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/railway"
            android:text="@string/female_text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout

        android:id="@+id/height_layout"
        android:layout_width="340dp"
        android:layout_height="150dp"
        android:layout_above="@id/center_horizontal_line"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="-50dp"
        android:background="@drawable/bg_card_small"
        android:elevation="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/railway"
            android:text="@string/height"
            android:textAlignment="center"
            android:textColor="#85868F"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/current_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="50dp"
            android:text="@string/base_height"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/current_height"
            android:fontFamily="@font/railway"
            android:text="@string/unit"
            android:textColor="#85868F"
            android:textSize="20sp"
            android:textStyle="bold" />

        <SeekBar
            android:id="@+id/seekbar_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            android:progressTint="@color/seekbar_color"
            android:thumbTint="@color/white" />
    </RelativeLayout>

    <android.widget.Button
        android:id="@+id/calc_button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/button_bg"
        android:fontFamily="@font/railway"
        android:text="@string/calculate"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RelativeLayout

        android:id="@+id/weight"
        android:layout_width="160dp"
        android:layout_height="150dp"
        android:layout_below="@id/height_layout"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="85dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:layout_toStartOf="@id/center_vertical_line"
        android:background="@drawable/bg_card_small"
        android:elevation="20dp">


        <TextView
            android:id="@+id/weight_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/railway"
            android:text="@string/weight"
            android:textAlignment="center"
            android:textColor="#85868F"
            android:textSize="18sp"
            android:textStyle="bold">

        </TextView>


        <TextView
            android:id="@+id/current_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/railway"
            android:text="@string/base_weight"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold">

        </TextView>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/plus_minus">

            <ImageView
                android:id="@+id/decrement_weight"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:contentDescription="@string/todo"
                android:padding="5dp"
                android:src="@drawable/ic_minus">

            </ImageView>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/plus_minus">

            <ImageView
                android:id="@+id/increment_weight"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:contentDescription="@string/todo"
                android:padding="5dp"
                android:src="@drawable/ic_add">

            </ImageView>

        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/age"
        android:layout_width="160dp"
        android:layout_height="150dp"
        android:layout_below="@id/height_layout"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="85dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:layout_toEndOf="@id/center_vertical_line"
        android:background="@drawable/bg_card_small"
        android:elevation="20dp">


        <TextView
            android:id="@+id/age_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/railway"
            android:text="@string/age"
            android:textAlignment="center"
            android:textColor="#85868F"
            android:textSize="18sp"
            android:textStyle="bold">

        </TextView>


        <TextView
            android:id="@+id/current_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/railway"
            android:text="@string/base_age"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold">

        </TextView>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/plus_minus">

            <ImageView
                android:id="@+id/decrement_age"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:contentDescription="@string/todo"
                android:padding="5dp"
                android:src="@drawable/ic_minus">

            </ImageView>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/plus_minus">

            <ImageView
                android:id="@+id/increment_age"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:contentDescription="@string/todo"
                android:padding="5dp"
                android:src="@drawable/ic_add">

            </ImageView>

        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>
